# RobustPowerEst

./: .gitignore  CMakeLists.txt  README.md  example.py  main.cpp  method.yaml  multitaper.yaml  robust.yaml  robust_power_estimation.py  standard.yaml
include/: dpss.h  spectrum_estimator.h  utils.h
sample/: HumanDemoData.h5
sample/eeg/: Human_Demo_Data.mat
src/: dpss.cpp  spectrum_estimator.cpp  utils.cpp
